# OpenDiloco

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check-style.yml  push-docker-image.yml
open_diloco/: .gitignore  a_train_fsdp.py  ckpt_utils.py  crypto_rewards.py  fixed_key.pem  fsdp_diloco_native.py  hivemind_diloco.py  init_weights.py  llama.py  model.py  pi_progress_logger.py  run_training.sh  simulate_multi_node.sh  train_diloco_torch.py  train_fsdp.py  train_pure_fsdp.py  utils.py
open_diloco/configs/: config_14m.json  config_150m.json  config_1b.json  config_2m.json  config_60m.json  config_7b.json
scripts/: pull-c4.sh  pull-model.py
tests/: test_diloco_hivemind.py  test_llama.py
tests/models/llama-2m-fresh/: config.json  generation_config.json  model.safetensors
tests/test_training/: test_fsdp_diloco.py  test_train.py
