[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenDiloco"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["open_diloco"]

[tool.ruff]
line-length = 120 # thanks to johannes screen's

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
